RESOLVED FIXED199910
[Pointer Events] The button and buttons properties are incorrect on iOS
https://bugs.webkit.org/show_bug.cgi?id=199910
Summary [Pointer Events] The button and buttons properties are incorrect on iOS
Antoine Quint
Reported 2019-07-18 09:49:32 PDT
[Pointer Events] The button and buttons properties are incorrect on iOS
Attachments
Patch (8.65 KB, patch)
2019-07-18 09:51 PDT, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2019-07-18 09:51:20 PDT
Antoine Quint
Comment 2 2019-07-18 09:51:25 PDT
Antoine Quint
Comment 3 2019-07-18 12:13:08 PDT
Antoine Quint
Comment 4 2019-09-17 07:01:37 PDT
*** Bug 201770 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.