Cherry-pick r247573. rdar://problem/55461395

[Pointer Events] The button and buttons properties are incorrect on iOS
    https://bugs.webkit.org/show_bug.cgi?id=199910
    <rdar://problem/52778374>

    Reviewed by Dean Jackson.

    Source/WebCore:

    The button and buttons properties were always set to 0 on iOS. We now use the correct values such that
    button is always 0 except for "pointermove" where it's -1, and "buttons" is 1 as long as the pointer is
    in contact with the touch surface.

    Tests: pointerevents/ios/pointer-event-button-and-buttons-pointer-cancel.html
           pointerevents/ios/pointer-event-button-and-buttons.html

    * dom/ios/PointerEventIOS.cpp:
    (WebCore::buttonForType):
    (WebCore::buttonsForType):
    (WebCore::PointerEvent::PointerEvent):

    LayoutTests:

    * pointerevents/ios/pointer-event-button-and-buttons-expected.txt: Added.
    * pointerevents/ios/pointer-event-button-and-buttons-pointer-cancel-expected.txt: Added.
    * pointerevents/ios/pointer-event-button-and-buttons-pointer-cancel.html: Added.
    * pointerevents/ios/pointer-event-button-and-buttons.html: Added.

    Canonical link: https://commits.webkit.org/213793@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247573 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.365@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@250010 268f45cc-cd09-0410-ab3c-d52691b4dbfc